# anikin_d_a

anikin_d_a/: CMakeLists.txt
anikin_d_a/prj.cw/: CMakeLists.txt  test.cpp  visualisation.py
anikin_d_a/prj.cw/doc/: Doxyfile  Doxyfile.in
anikin_d_a/prj.cw/doc/html/: dir_b7f94044ce5261a87c3e7d278b858fe8.html  files.html  index.html  library_8h_source.html
anikin_d_a/prj.cw/doc/latex/: files.tex  library_8h_source.tex  refman.tex
anikin_d_a/prj.cw/gradient_lib/: CMakeLists.txt  library.cpp  library.h
anikin_d_a/prj.lab/arrayd/: CMakeLists.txt  arrayd.cpp
anikin_d_a/prj.lab/arrayd/include/arrayd/: arrayd.hpp
anikin_d_a/prj.lab/arrayt/: CMakeLists.txt
anikin_d_a/prj.lab/matrixs/: CMakeLists.txt
anikin_d_a/prj.lab/matrixs/include/matrixs/: matrixs.hpp
anikin_d_a/prj.lab/orto/: orto.20230519
anikin_d_a/prj.lab/rational/: CMakeLists.txt  rational.cpp
anikin_d_a/prj.lab/rational/include/rational/: rational.hpp
anikin_d_a/prj.test/: CMakeLists.txt
rational/: CMakeLists.txt  main.cpp  rational.doctest.cpp
rational/prj.lab/rational/: rational.cpp
rational/prj.test/: rational_test.cpp
rational/rational/: CMakeLists.txt  rational.cpp  rational.h
